# software

./: .gitignore  .gitmodules  README.md
ada/: compile.sh  hello.adb
awk/: add_ground_short.awk  count_commas.awk  fixverilogout.awk  input.tdf  invers_numbers.txt  inverse.tmp  inverse_order.awk  pgStripes.awk  remove_empty_module.awk  svn_report.awk  tdf2vtdfOrder.awk  usb_top.io.awk
bash/: .bashrc  Vorlage_2.sh  audio_extraction.sh  backup.sh  can_scan_addresses.sh  change_words.sh  cleanup.sh  convert.sh  delete_rows.sh  duplicity.sh  ec.sh  encfs.sh  es.sh  et.sh  find_video_url.sh  flexlm.sh  good_example.sh  install_stm32_toolchain.sh  make_kohltour_flyer.sh  md2pdf.sh  mount_pi_image.sh  mount_work_server.sh  my_backup.lst  my_backup.sh  my_backup_globbing.lst  my_can.sh  my_change_words.sh  my_eth0.sh  my_vpn.sh  my_wlan.sh  run_gtags_files.sh  sdso_post_install.sh  send-ip.sh  sherpatt-bashrc  shrinkpdf.sh  start_terminal_server.sh  wav2mp3.sh  wget.sh  wget_all_pdfs.sh  xilinx_ghdl_simprim.sh  (+2 more)
c/: Makefile  argp.c  berechne_porto.c  file_example.c  func.c  gen_time_pack.c  good_example.c  lm73.c  network_socket.c  ntc_conversion.c  quadrant.c  serial_communication.c  srl16e.c  stack.c  string2mem.c  test.c  threads.c  tree.c
c++/: Makefile  WORLD1.CPP  file.txt  func.cpp  helloWorld.cpp  openSimpati.cpp  openSimpati_client.cpp  openSimpati_server.cpp  sample.cpp  serial_communication.h  serialcom.cpp  serialcom.h  serialcom_connect_dialog.h
cmake/cmake_lib/: CMakeLists.txt
cmake/cmake_lib/src/: Main.cpp
dotfiles/: .gitconfig  .profile  .profile_common  .zshrc  fstab  (+2 more)
(+267 files in other folders)
